# ripht-php-sapi

./: .cursorignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE  README.md  build.rs  rustfmt.toml
.cargo/: config.toml.example
benches/: sapi_comparison.rs  sapi_performance.rs  support.rs  throughput.rs
benches/shared/: backend.rs  env.rs  fpm.rs  frankenphp.rs  mod.rs  pool.rs  protocol.rs  sapi.rs  worker.rs
docs/leanpub/: summary.md
examples/: basic_execution.rs  encoding_gaunlet.rs  encoding_guanlet.rs  env_and_ini.rs  error_handling.rs  exception_recovery.rs  file_io.rs  file_upload.rs  hooks_basic.rs  hooks_comprehensive.rs  hooks_output_handling.rs  hooks_streaming_callback.rs  http_server.rs  memory_pressure.rs  post_form.rs  post_json.rs  session_handling.rs  streaming_output.rs  tracing_demo.rs
src/: lib.rs
src/adapters/: cli.rs  mod.rs  tests.rs  web.rs
src/execution/: context.rs  header.rs  hooks.rs  message.rs  mod.rs  result.rs
src/sapi/: callbacks.rs  executor.rs  ffi.rs  mod.rs  server_context.rs  server_vars.rs
tests/: sapi.rs
tests/php_scripts/: api.php  basic.php  binary_output.php  content_types.php  cookies.php  encoding_gaunlet.php  encoding_guanlet.php  env_and_ini.php  env_vars.php  error_log_test.php  errors.php  exception_handling.php  file_io.php  file_upload.php  get_params.php  header_edge_cases.php  headers.php  hello.php  ini_overrides.php  large_input.php  large_output.php  memory_intensive.php  multipart_complex.php  output_buffering.php  post_form.php  post_json.php  server_vars.php  (+6 more)
