[package]
name = "ripht-php-sapi"
version = "0.1.0-rc.5"
edition = "2021"
authors = ["Jonathan Havens <mail@jhavens.tech>"]
repository = "https://github.com/jhavenz/ripht-php-sapi"
homepage = "https://github.com/jhavenz/ripht-php-sapi"
description = "Ripht PHP SAPI - A PHP SAPI written in Rust to expose safe and convenient APIs to encourage additional Rust tooling development for PHP"
license = "MIT"
keywords = ["php", "sapi", "ffi", "embed", "ripht"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/ripht-php-sapi"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
thiserror = "2.0"
http = { version = "1.4", optional = true }
memchr = "2.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "sapi_comparison"
harness = false

[build-dependencies]
bindgen = "0.69"

[features]
default = ["serde", "http"]
serde = ["dep:serde", "dep:serde_json"]
tracing = ["dep:tracing"]
http = ["dep:http"]

[package.metadata.docs.rs]
features = ["serde", "tracing", "http"]

